--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.0",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.1",
+    "dayjs": "^1.8.28",
+    "dotenv": "^8.2.0",
+    "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.10",
     "polka": "next",
     "rollup-plugin-svg-import": "^1.5.1",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.0",
+    "svelte-preprocess": "^3.9.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
